objects/PMC_SS_AccountPartnerRelationships__c.object
<CustomObject>
    <description>This junction object is used to store Partner relationships related to the Account.</description>
    <fields>
        <fullName>Account_SAP_ID_N__c</fullName>
        <formula>PMC_SS_Account__r.PMC_SS_SAPCustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SAP ID N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPCustomerNumber__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.PMC_SS_SAPCustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingCity__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.ShippingCity</formula>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingCountry__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.ShippingCountry</formula>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingStateProvince__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.ShippingState</formula>
        <label>Shipping State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingStreet__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.ShippingStreet</formula>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingZipPostalCode__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.ShippingPostalCode</formula>
        <label>Shipping Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_StateTaxNumber__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.PMC_SS_StateTaxNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Tax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TaxIDOrCNPJOrCPF__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.PMC_SS_TaxIDOrCNPJOrCPF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID/CNPJ/CPF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TaxID_or_CPF__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.PMC_SS_CPF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ/CPF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TransportationZone__c</fullName>
        <formula>PMC_SS_RelatedAccount__r.PMC_SS_TransportationZone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountSAPID__c</fullName>
        <description>Store Account SAP ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account SAP ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Account__c</fullName>
        <description>This field is used to look up to sold-to master</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Sold-to</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Partner Accounts</relationshipLabel>
        <relationshipName>PMC_SS_RelatedSoldToAccounts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
        <description>Stores unique identifier of record with concatenation of:  Account SAP Customer Id  + Related Account SAP customer Id  + Account type</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Unique Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether this object is active or not</description>
        <inlineHelpText>When checked, this junction relationship is Active</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RelatedAccountSAPId__c</fullName>
        <description>Stores SAP Customer Id of Bill-to/Payer/Ship-to Accounts.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Account SAP ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RelatedAccountSalesArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Concatenation of Account SAP ID + Sales Org + Divison + Distribution Channel.</description>
        <label>Related Account Sales Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMC_SS_AccountSalesAreaRelationship__c.PMC_SS_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.PMC_SS_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMC_SS_AccountSalesAreaRelationship__c</referenceTo>
        <relationshipLabel>Account Partner Relationships</relationshipLabel>
        <relationshipName>Account_Partner_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to related Bill-to, Ship-to and Payer to Sold-to accounts</description>
        <inlineHelpText>Junction Object will be renamed to Related Account’s name on save</inlineHelpText>
        <label>Related Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Ship-to</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Sold-to</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Bill-to</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Payer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Partner Relationships (Related Account)</relationshipLabel>
        <relationshipName>PMC_SS_RelatedPartnerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Type__c</fullName>
        <defaultValue>(&quot;Ship-to&quot;)</defaultValue>
        <description>Specifies the relation of the two Accounts</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ship-to</fullName>
                    <default>true</default>
                    <label>Ship-to</label>
                </value>
                <value>
                    <fullName>Bill-to</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Partner Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PMC_SS_Account__c</columns>
        <columns>PMC_SS_Type__c</columns>
        <columns>PMC_SS_RelatedAccount__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Partner Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Partner Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>